--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,7 +13,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:layout_marginBottom="16dp"
+        android:layout_marginBottom="20dp"
         android:layout_weight="0"
         android:clickable="true"
         android:onClick="close"
@@ -48,7 +48,8 @@
             android:layout_width="wrap_content"
             android:layout_height="50dp"
             android:layout_gravity="center"
-            android:layout_marginTop="5dp"
+            android:layout_marginTop="8dp"
+            android:fontFamily="sans-serif"
             android:gravity="center"
             android:text="What's the Weather?"
             android:textAlignment="gravity"
@@ -62,7 +63,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_marginStart="32dp"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="10dp"
             android:layout_marginEnd="32dp"
             android:hint="Location"
             app:endIconDrawable="@drawable/round_cancel_20"
